--- a/src/pages/links/links.css
+++ b/src/pages/links/links.css
@@ -57,6 +57,12 @@
     background: transparent;
 }
 
+.empty-text{
+    width: 100%;
+    text-align: center;
+    margin-top: 28px;
+}
+
 @media(max-width: 715px){
     .links-container{
         width: 90%;
